(US5 S2)Alter the StudentMyLessonsPage to properly display enrolled lessons - Incorporated the LessonCard object similar to the enrollment page to keep the card style consistent - Modified the CSS of the StudentMyLessonsPage to ensure the cards were formatted properly and not squished together too close - Change the navigation route to go to "lesson-enroll" instead of "lesson-enrollment" - Used setLessons to save and store the information from the backend to ensure it can be displayed accordingly

--- a/Frontend/beacon-react-app/src/pages/Student/StudentMyLessonsPage/StudentMyLessonsPage.module.css
+++ b/Frontend/beacon-react-app/src/pages/Student/StudentMyLessonsPage/StudentMyLessonsPage.module.css
@@ -118,3 +118,9 @@ height: 50px;
 background: linear-gradient(to bottom, #88ccd8 0%, #88ccd8 50%, #f1cea8 100%);
 border-radius: 6px;
 }
+
+.grid1 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 30px;
+}
